--- a/Framework/src/LibUntrusted/CMakeLists.txt
+++ b/Framework/src/LibUntrusted/CMakeLists.txt
@@ -5,8 +5,19 @@ set(CMAKE_CXX_STANDARD 11)
 
 link_directories(${MBEDTLS_DIR}/build/library)
 
-set(SOURCES ${LIB_UNTRUSTED_DIR}/untrusted_util.cpp ${LIB_UNTRUSTED_DIR}/untrusted_crypto.cpp ${LIB_UNTRUSTED_DIR}/secure_conn.cpp)
+if(SERVER_ONLY)
+    set(SOURCES ${LIB_UNTRUSTED_DIR}/untrusted_util.cpp ${LIB_UNTRUSTED_DIR}/untrusted_crypto.cpp)
+else()
+    set(SOURCES ${LIB_UNTRUSTED_DIR}/untrusted_util.cpp ${LIB_UNTRUSTED_DIR}/untrusted_crypto.cpp ${LIB_UNTRUSTED_DIR}/secure_conn.cpp)
+endif()
+
+
 add_library(${LIB_UNTRUSTED} ${SOURCES})
 
 target_include_directories(${LIB_UNTRUSTED} PRIVATE ${FRAMEWORK_INCLUDE_DIR} ${MBEDTLS_DIR}/include)
-target_link_libraries(${LIB_UNTRUSTED} sodium mbedcrypto mbedtls mbedx509)
+
+if(SERVER_ONLY)
+    target_link_libraries(${LIB_UNTRUSTED})
+else()
+    target_link_libraries(${LIB_UNTRUSTED} sodium mbedcrypto mbedtls mbedx509)
+endif()
