--- a/isen.cfg
+++ b/isen.cfg
@@ -1,10 +1,10 @@
 // generic
-use_text = 0
-use_images = 1
+use_text = 1
+use_images = 0
 use_multimodal = 0
 
 bisen = {
-    nr_docs = 1000000;
+    nr_docs = 100000;
 
     queries = (
         "time", "person", "year", "way", "day", "thing", "man", "world", "life", "hand", "part", "child",
@@ -26,7 +26,7 @@ bisen = {
 };
 
 visen = {
-    nr_docs = 1491;
+    nr_docs = 100;
     train_technique = "client_kmeans"; // client_kmeans or iee_kmeans
     train_mode = "load"; // train or load
     add_mode = "normal"; // normal or load
@@ -35,14 +35,15 @@ visen = {
     descriptor_threshold = 500;
     nr_clusters = 5000;
     clusters_file = "centroidsbak/centroids5000";
+    //dataset_dir = "/home/guilherme/Datasets/mirflickr/";
     dataset_dir = "/home/guilherme/Datasets/inria/";
 };
 
 misen = {
     text_dir = "/home/guilherme/Datasets/mirflickr/meta/tags/";
     img_dir = "/home/guilherme/Datasets/mirflickr/";
-    nr_docs = 10;
-    nr_queries = 5;
+    nr_docs = 10000;
+    nr_queries = 25;
 };
 
 /*
