--- a/isen.cfg
+++ b/isen.cfg
@@ -1,6 +1,6 @@
 // generic
-use_text = 0
-use_images = 1
+use_text = 1
+use_images = 0
 use_multimodal = 0
 
 bisen = {
@@ -27,14 +27,15 @@ bisen = {
 
 visen = {
     nr_docs = 1491;
-    train_technique = "client_kmeans"; // client_kmeans or iee_kmeans
-    train_mode = "load"; // train or load
+    train_technique = "lsh"; // client_kmeans or iee_kmeans
+    train_mode = "train"; // train or load
     add_mode = "normal"; // normal or load
     search_mode = "inria";
 
     descriptor_threshold = 500;
     nr_clusters = 5000;
-    clusters_file = "centroidsbak/centroids5000";
+    clusters_file = "centroidsbak/centroids-lsh";
+    //clusters_file = "centroidsbak/centroids5000";
     //dataset_dir = "/home/guilherme/Datasets/mirflickr/";
     dataset_dir = "/home/guilherme/Datasets/inria/";
 };
