--- a/isen.cfg
+++ b/isen.cfg
@@ -1,6 +1,6 @@
 // generic
-use_text = 1
-use_images = 0
+use_text = 0
+use_images = 1
 use_multimodal = 0
 
 bisen = {
@@ -19,7 +19,8 @@ bisen = {
         "!time && person && year && way && day && thing && man && world && life && hand",
         "!time && !person && !year && !way && !day && thing && man && world && life && hand",
         "!time && !person && !year && !way && !day && !thing && !man && !world && !life && !hand",
-        "!(time && person && year && way && day && thing && man && world && life && hand)"
+        "!(time && person && year && way && day && thing && man && world && life && hand)",
+        "!time || !person || !year || !way || !day || !thing || !man || !world || !life || !hand"
     );
     doc_type = "wiki";
     dataset_dir = "/home/guilherme/Datasets/wikipedia-parsed/";
@@ -27,17 +28,18 @@ bisen = {
 
 visen = {
     nr_docs = 1491;
-    train_technique = "lsh"; // client_kmeans or iee_kmeans
+    train_technique = "client_kmeans"; // client_kmeans or iee_kmeans
     train_mode = "train"; // train or load
     add_mode = "normal"; // normal or load
     search_mode = "inria";
 
-    descriptor_threshold = 500;
-    nr_clusters = 5000;
-    clusters_file = "centroidsbak/centroids-lsh";
+    descriptor_threshold = 2900;
+    nr_clusters = 500;
+    clusters_file = "centroidsbak/client-500-surf";
+    dataset_dir = "/home/guilherme/Datasets/inria/";
+
     //clusters_file = "centroidsbak/centroids5000";
     //dataset_dir = "/home/guilherme/Datasets/mirflickr/";
-    dataset_dir = "/home/guilherme/Datasets/inria/";
 };
 
 misen = {
@@ -48,27 +50,20 @@ misen = {
 };
 
 /*
-    queries = ("time", "person", "year", "way", "day", "thing", "man", "world", "life", "hand", "part", "child");
-    queries = ("history", "country", "born", "lisbon", "york", "paris");
-
     queries = (
-        "time && person",
-        "time && person && year && way && day",
-        "time && person && year && way && day && thing && man && world && life && hand",
-        "time || person",
-        "time || person || year || way || day",
-        "time || person || year || way || day || thing || man || world || life || hand"
-    );
+        "time", "person", "year", "way", "day", "thing", "man", "world", "life", "hand", "part", "child",
+        "history", "country", "born", "lisbon", "york", "paris",
 
-    queries = (
+        "time && person", "time && person && year && way && day", "time && person && year && way && day && thing && man && world && life && hand",
+        "time || person", "time || person || year || way || day", "time || person || year || way || day || thing || man || world || life || hand",
+
+        "(time && person) || (year && way)", "(time && person) || (year && way) || (day && thing) || (man && world)", "(time && person) || (year && way) || (day && thing) || (man && world) || (life && hand) || (part && child)",
+        "(time || person) && (year || way)", "(time || person) && (year || way) && (day || thing) && (man || world)", "(time || person) && (year || way) && (day || thing) && (man || world) && (life || hand) && (part || child)",
+
         "!time && person && year && way && day && thing && man && world && life && hand",
         "!time && !person && !year && !way && !day && thing && man && world && life && hand",
         "!time && !person && !year && !way && !day && !thing && !man && !world && !life && !hand",
-        "!(time && person && year && way && day && thing && man && world && life && hand)"
-    );
-
-    queries = (
-        "(time && person) || (year && way)", "(time && person) || (year && way) || (day && thing) || (man && world)", "(time && person) || (year && way) || (day && thing) || (man && world) || (life && hand) || (part && child)",
-        "(time || person) && (year || way)", "(time || person) && (year || way) && (day || thing) && (man || world)", "(time || person) && (year || way) && (day || thing) && (man || world) && (life || hand) && (part || child)"
+        "!(time && person && year && way && day && thing && man && world && life && hand)",
+        "!time || !person || !year || !way || !day || !thing || !man || !world || !life || !hand"
     );
 */
