add results file

--- a/isen.cfg
+++ b/isen.cfg
@@ -34,8 +34,9 @@ visen = {
     search_mode = "inria";
 
     descriptor_threshold = 2900;
-    nr_clusters = 500;
-    clusters_file = "centroidsbak/client-500-surf";
+    nr_clusters = 1000;
+    clusters_file = "centroidsbak/client-1000-surf2900";
+    results_file = "results/client-1000-surf2900.dat";
     dataset_dir = "/home/guilherme/Datasets/inria/";
 
     //clusters_file = "centroidsbak/centroids5000";
