--- a/Framework/src/UeeBisen/CMakeLists.txt
+++ b/Framework/src/UeeBisen/CMakeLists.txt
@@ -1,4 +1,5 @@
-
+list(APPEND CMAKE_MODULE_PATH ${SERVER_BISEN_DIR})
+find_package(TBB REQUIRED)
 #set(DEBUG_FLAGS "-g -O0")
 
 set(CMAKE_C_FLAGS "-pthread -O3 -fPIC -Wall -Wno-unused-result")
@@ -12,4 +13,4 @@ link_directories(${MBEDTLS_DIR}/build/library /usr/local/lib)
 
 add_executable(StorageBisen ${SERVER_BISEN_DIR}/main.cpp ${SERVER_BISEN_DIR}/SseServer.cpp ${SERVER_BISEN_DIR}/cassie.cpp)
 target_include_directories(StorageBisen PRIVATE ${FRAMEWORK_INCLUDE_DIR} ${SERVER_BISEN_DIR} ${SPARSEPP_DIR} /usr/local/include)
-target_link_libraries(StorageBisen ${LIB_UNTRUSTED} pthread cassandra hiredis)
+target_link_libraries(StorageBisen ${LIB_UNTRUSTED} pthread cassandra hiredis tbb)
