better integrate storage services

--- a/Framework/src/UeeBisen/CMakeLists.txt
+++ b/Framework/src/UeeBisen/CMakeLists.txt
@@ -1,9 +1,11 @@
 list(APPEND CMAKE_MODULE_PATH ${SERVER_BISEN_DIR})
 find_package(TBB REQUIRED)
-#set(DEBUG_FLAGS "-g -O0")
 
-set(CMAKE_C_FLAGS "-pthread -O3 -fPIC -Wall -Wno-unused-result")
-set(CMAKE_CXX_FLAGS "-pthread -O3 -fPIC -Wall -Wno-unused-result")
+#set(DEBUG_FLAGS "-g -O0")
+set(DEBUG_FLAGS "-O3")
+
+set(CMAKE_C_FLAGS "-pthread ${DEBUG_FLAGS} -fPIC -Wall -Wno-unused-result")
+set(CMAKE_CXX_FLAGS "-pthread ${DEBUG_FLAGS} -fPIC -Wall -Wno-unused-result")
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 11)
 
@@ -11,6 +13,6 @@ set(SPARSEPP_DIR ${CMAKE_SOURCE_DIR}/sparsepp)
 
 link_directories(${MBEDTLS_DIR}/build/library /usr/local/lib)
 
-add_executable(StorageBisen ${SERVER_BISEN_DIR}/main.cpp ${SERVER_BISEN_DIR}/SseServer.cpp ${SERVER_BISEN_DIR}/cassie.cpp)
+add_executable(StorageBisen ${SERVER_BISEN_DIR}/SseServer.cpp ${SERVER_BISEN_DIR}/cassie.cpp)
 target_include_directories(StorageBisen PRIVATE ${FRAMEWORK_INCLUDE_DIR} ${SERVER_BISEN_DIR} ${SPARSEPP_DIR} /usr/local/include)
 target_link_libraries(StorageBisen ${LIB_UNTRUSTED} pthread cassandra hiredis tbb)
