--- a/isen.cfg
+++ b/isen.cfg
@@ -1,6 +1,6 @@
 // generic
-use_text = 1
-use_images = 0
+use_text = 0
+use_images = 1
 use_multimodal = 0
 
 bisen = {
@@ -29,14 +29,14 @@ bisen = {
 visen = {
     nr_docs = 1491;
     train_technique = "client_kmeans"; // client_kmeans or iee_kmeans
-    train_mode = "train"; // train or load
+    train_mode = "load"; // train or load
     add_mode = "normal"; // normal or load
     search_mode = "inria";
 
-    descriptor_threshold = 700;
+    descriptor_threshold = 500;
     nr_clusters = 1000;
-    clusters_file = "centroidsbak/client-1000-surf700";
-    results_file = "results/client-1000-surf2900.dat";
+    clusters_file_dir = "centroidsbak";
+    results_file_dir = "results";
     dataset_dir = "/home/guilherme/Datasets/inria/";
 
     //clusters_file = "centroidsbak/centroids5000";
