fully integrate storage services

--- a/Framework/CMakeLists.txt
+++ b/Framework/CMakeLists.txt
@@ -46,8 +46,7 @@ set(sgx_cpp_flags "${sgx_c_flags} -nostdinc++")
 # directories for modules
 set(LIB_UNTRUSTED_DIR ${FRAMEWORK_DIR}/src/LibUntrusted)
 set(LIB_TRUSTED_DIR ${FRAMEWORK_DIR}/src/LibTrusted)
-set(SERVER_DIR ${FRAMEWORK_DIR}/src/Uee)
-set(SERVER_BISEN_DIR ${FRAMEWORK_DIR}/src/UeeBisen)
+set(STORAGE_DIR ${FRAMEWORK_DIR}/src/StorageService)
 set(CLIENT_DIR ${FRAMEWORK_DIR}/src/Client)
 set(IEE_COMM_DIR ${FRAMEWORK_DIR}/src/IeeComm)
 set(IEE_DIR ${FRAMEWORK_DIR}/src/Iee)
@@ -57,21 +56,15 @@ set(LIB_UNTRUSTED untrusted_util)
 add_subdirectory(${LIB_UNTRUSTED_DIR})
 
 if(SERVER_ONLY)
-    # ueebisen module
-    add_subdirectory(${SERVER_BISEN_DIR})
-
-    # uee module
-    add_subdirectory(${SERVER_DIR})
+    # storage module
+    add_subdirectory(${STORAGE_DIR})
 else()
     # lib trusted
     set(LIB_TRUSTED trusted_util)
     add_subdirectory(${LIB_TRUSTED_DIR})
 
-    # uee module
-    add_subdirectory(${SERVER_DIR})
-
-    # ueebisen module
-    add_subdirectory(${SERVER_BISEN_DIR})
+    # storage module
+    add_subdirectory(${STORAGE_DIR})
 
     # client module
     add_subdirectory(${CLIENT_DIR})
