--- a/isen.cfg
+++ b/isen.cfg
@@ -4,7 +4,7 @@ use_images = 1
 use_multimodal = 0
 
 bisen = {
-    nr_docs = 50000;
+    nr_docs = 1000000;
 
     queries = (
         "time", "person", "year", "way", "day", "thing", "man", "world", "life", "hand", "part", "child",
@@ -34,8 +34,9 @@ visen = {
     search_mode = "inria";
 
     descriptor_threshold = 500;
-    nr_clusters = 1000;
+    nr_clusters = 5000;
     clusters_file_dir = "centroidsbak";
+    //clusters_file_override = "centroidsbak/centroids_k5000_surf_0400";
     results_file_dir = "results";
     dataset_dir = "/home/guilherme/Datasets/inria/";
     //dataset_dir = "/home/guilherme/Datasets/mirflickr/";
