--- a/Framework/src/Client/CMakeLists.txt
+++ b/Framework/src/Client/CMakeLists.txt
@@ -1,8 +1,8 @@
 find_package(OpenCV REQUIRED)
 find_package(OpenSSL REQUIRED)
 
-set(CMAKE_C_FLAGS "-pthread -g -O0 -fPIC -Wno-unused-variable -Wall -Wno-unused-function")
-set(CMAKE_CXX_FLAGS "-pthread -g -O0 -fPIC -Wno-unused-variable -Wall -Wno-unused-function")
+set(CMAKE_C_FLAGS "-pthread -g -O0 -fPIC -Wno-unused-variable -Wall -Wno-unused-function -fstack-protector-all")
+set(CMAKE_CXX_FLAGS "-pthread -g -O0 -fPIC -Wno-unused-variable -Wall -Wno-unused-function -fstack-protector-all")
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 11)
 
