refactored feature extractor

--- a/isen.cfg
+++ b/isen.cfg
@@ -28,6 +28,7 @@ bisen = {
 
 visen = {
     nr_docs = 1491;
+    desc_sift = 1;
     train_technique = "client_kmeans"; // client_kmeans or iee_kmeans
     train_mode = "load"; // train or load
     add_mode = "normal"; // normal or load
