add parameters for testing

--- a/isen.cfg
+++ b/isen.cfg
@@ -4,7 +4,7 @@ use_images = 1
 use_multimodal = 0
 
 bisen = {
-    nr_docs = 1000000;
+    nr_docs = 2000000;
 
     queries = (
         "time", "person", "year", "way", "day", "thing", "man", "world", "life", "hand", "part", "child",
@@ -28,19 +28,21 @@ bisen = {
 
 visen = {
     nr_docs = 1491;
-    desc_sift = 1;
-    train_technique = "client_kmeans"; // client_kmeans or iee_kmeans
+    nr_queries = 0;
+    desc_sift = 1; // surf = 0, sift = 1
+    train_technique = "client_kmeans"; // client_kmeans, iee_kmeans, lsh
     train_mode = "load"; // train or load
     add_mode = "normal"; // normal or load
     search_mode = "inria";
 
-    descriptor_threshold = 500;
+    descriptor_threshold = 2500;
     nr_clusters = 5000;
     clusters_file_dir = "centroidsbak";
-    //clusters_file_override = "centroidsbak/centroids_k5000_surf_0400";
     results_file_dir = "results";
     dataset_dir = "/home/guilherme/Datasets/inria/";
     //dataset_dir = "/home/guilherme/Datasets/mirflickr/";
+
+    //clusters_file_override = "centroidsbak/centroids_k1000_surf_1500";
 };
 
 misen = {
