--- a/isen.cfg
+++ b/isen.cfg
@@ -1,7 +1,9 @@
 // generic
 use_text = 0
-use_images = 0
-use_multimodal = 1
+use_images = 1
+use_multimodal = 0
+
+iee_hostname = "localhost" //"10.171.239.104"
 
 bisen = {
     nr_docs = 5000000;
@@ -35,19 +37,21 @@ visen = {
     add_mode = "normal"; // normal or load
     search_mode = "inria";
 
-    descriptor_threshold = 1200;
+    descriptor_threshold = 500;
     nr_clusters = 5000;
     clusters_file_dir = "centroidsbak";
     results_file_dir = "results";
-    //dataset_dir = "/home/guilherme/Datasets/inria/";
-    dataset_dir = "/home/guilherme/Datasets/mirflickr/";
+    //dataset_dir = "/home/gb/Datasets/inria/";
+    //dataset_dir = "/home/gb/Datasets/mirflickr/";
+    dataset_dir = "/home/gb/Datasets/mirflickr_1M/";
+    dataset_rec = 1; // 0 for dir with files, 1 for dir of dirs of files
 
     //clusters_file_override = "centroidsbak/centroids_k1000_surf_1500";
 };
 
 misen = {
-    text_dir = "/home/guilherme/Datasets/mirflickr/meta/tags/";
-    img_dir = "/home/guilherme/Datasets/mirflickr/";
+    text_dir = "/home/gb/Datasets/mirflickr/meta/tags/";
+    img_dir = "/home/gb/Datasets/mirflickr/";
     nr_docs = 25000;
     nr_queries = 25;
 };
