--- a/isen.cfg
+++ b/isen.cfg
@@ -3,7 +3,8 @@ use_text = 0
 use_images = 1
 use_multimodal = 0
 
-iee_hostname = "localhost" //"10.171.239.104"
+iee_hostname = "10.171.239.104"
+//iee_hostname = "localhost"
 
 bisen = {
     nr_docs = 5000000;
@@ -29,7 +30,7 @@ bisen = {
 };
 
 visen = {
-    nr_docs = 25000;
+    nr_docs = 50000;
     nr_queries = 25;
     desc_sift = 1; // surf = 0, sift = 1
     train_technique = "client_kmeans"; // client_kmeans, iee_kmeans, lsh
